lab6/yaml/np-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: np-ns
  labels:
    name: np-ns
