lab6/yaml/pod3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod3
  labels:
    app: pod3
spec:
  containers:
    - name: pod3
      image: nginx
