lab6/yaml/pod4.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns4
---
apiVersion: v1
kind: Pod
metadata:
  name: pod4
  namespace: ns4
  labels:
    app: pod4
spec:
  containers:
    - name: pod4
      image: nginx
