lab6/yaml/tk-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tk-pod
  namespace: ns1
  labels:
    app: pod
spec:
   containers:
   - name: container
     image: nginx
