lab6/yaml/ns-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ns-np
spec:
  podSelector:
    matchLabels:
      app: pod1
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ns4          
    ports:
      - protocol: TCP
        port: 80
