lab6/yaml/pod1-deny-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: 
    app: pod1
  policyTypes:
  - Ingress
