lab6/yaml/somepod-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: somepod-np
spec:
  podSelector:
    matchLabels:
      app: pod1
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: pod2
    ports:
    - protocol: TCP
      port: 80
